fixed Look of tag autocompletion: in the case of many tag suggestions, the window of suggested tags was too long.

--- a/bibsonomy-webapp/src/main/webapp/resources/css/style.css
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/style.css
@@ -2513,7 +2513,7 @@ div.fsRow div.resizable-textarea textarea {
 }
 
 .ui-autocomplete { 
-	height: 150px; 
+	max-height: 150px; 
 	overflow-y: scroll; 
 }
 
